# aula09_bootcamp

./: README.md  data.parquet  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  tenacity_decorator.py  time_decorator.py
