[tool.poetry]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = ["sch-paulo <pschmitzjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
pandas = "^2.2.3"
tenacity = "^9.0.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
